Fixed some major bugs after revision. (Mainly due to Externalizable, and several configuration bugs due to package name changes.)
Implemented requestNextJob() functionality to allow nodes to join existing jobs once they join grid, without waiting for a JOB_START notification.

However, nodes join to grid after job was enqueued do not receive any pieces. This may be due to asynchronous consumption of messages. Have to fix this in future revision.

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Mon Jul 07 22:25:02 LKT 2008
+#Tue Jul 08 00:21:11 LKT 2008
 clsCnt=72
 eclipse.preferences.version=1
-locCnt=7644
-pkgCnt=50
-sTime=Monday, July 7, 2008 10\:25\:02 PM LKT
+locCnt=8025
+pkgCnt=49
+sTime=Tuesday, July 8, 2008 12\:21\:11 AM LKT
 srcCnt=2
