Implemented and tested Mandelbrot Set (Split Aggregate)
Implemented and tested Buddhabrot Set (Unbounded)

Fixed sync issue with Results Collection

Tested Mandelbrot on multi clusters with successful results

Yet to test Buddhabrot on multi clusters

--- a/.settings/com.genuitec.eclipse.core.prefs
+++ b/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Sat Jul 12 01:38:46 LKT 2008
-clsCnt=89
+#Sat Jul 12 22:52:25 LKT 2008
+clsCnt=94
 eclipse.preferences.version=1
-locCnt=9967
-pkgCnt=52
-sTime=Saturday, July 12, 2008 1\:38\:46 AM LKT
+locCnt=10654
+pkgCnt=53
+sTime=Saturday, July 12, 2008 10\:52\:25 PM LKT
 srcCnt=2
