[Fixing] Buddhabrot OutOfMemory issue on large image sizes Sync Commit

--- a/.settings/com.genuitec.eclipse.core.prefs
+++ b/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Sat Jul 12 22:52:25 LKT 2008
-clsCnt=94
+#Sun Jul 13 01:28:57 LKT 2008
+clsCnt=104
 eclipse.preferences.version=1
-locCnt=10654
-pkgCnt=53
-sTime=Saturday, July 12, 2008 10\:52\:25 PM LKT
+locCnt=11800
+pkgCnt=56
+sTime=Sunday, July 13, 2008 1\:28\:57 AM LKT
 srcCnt=2
