--- a/branches/nebula-core-remote-debug/.settings/com.genuitec.eclipse.core.prefs
+++ b/branches/nebula-core-remote-debug/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Mon Jul 14 00:00:04 LKT 2008
-clsCnt=106
+#Mon Jul 14 13:14:37 LKT 2008
+clsCnt=101
 eclipse.preferences.version=1
-locCnt=12047
-pkgCnt=58
-sTime=Monday, July 14, 2008 12\:00\:04 AM LKT
+locCnt=11609
+pkgCnt=56
+sTime=Monday, July 14, 2008 1\:14\:37 PM LKT
 srcCnt=2
