Added Buddhabrot Sequential Version to Project

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Mon Jul 14 13:14:37 LKT 2008
-clsCnt=101
+#Tue Jul 15 00:47:18 LKT 2008
+clsCnt=106
 eclipse.preferences.version=1
-locCnt=11609
-pkgCnt=56
-sTime=Monday, July 14, 2008 1\:14\:37 PM LKT
+locCnt=11822
+pkgCnt=59
+sTime=Tuesday, July 15, 2008 12\:47\:18 AM LKT
 srcCnt=2
