Revised / Added JavaDoc Comments
Implemented GridJobFutureClientSideProxy with local blocking getResult() methods.

For resultCallback notifications, introduced ExecutorService to preserve thread space and enhance performance by reusing single pooled thread.

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Tue Jul 15 00:47:18 LKT 2008
-clsCnt=106
+#Tue Jul 15 14:13:07 LKT 2008
+clsCnt=111
 eclipse.preferences.version=1
-locCnt=11822
-pkgCnt=59
-sTime=Tuesday, July 15, 2008 12\:47\:18 AM LKT
+locCnt=14131
+pkgCnt=60
+sTime=Tuesday, July 15, 2008 2\:13\:07 PM LKT
 srcCnt=2
