--- a/trunk/nebula-core/src/log4j.properties
+++ b/trunk/nebula-core/src/log4j.properties
@@ -4,3 +4,4 @@ log4j.appender.nebula.layout=org.apache.log4j.SimpleLayout
 log4j.logger.org.apache.activemq=INFO
 log4j.logger.org.apache.xbean=ERROR
 log4j.logger.org.springframework=ERROR
+log4j.logger.org.nebulaframework.util.spring=ERROR
