--- a/trunk/nebula-core/nebula-client.properties
+++ b/trunk/nebula-core/nebula-client.properties
@@ -1,2 +1,3 @@
 # Nebula Client (Cluster Node) Configuration
-cluster.url=tcp://localhost:61616
+#cluster.service=tcp://localhost
+colombus.servers=http://localhost:9000
