--- a/trunk/nebula-core/nebula-cluster.properties
+++ b/trunk/nebula-core/nebula-cluster.properties
@@ -1,2 +1,3 @@
 # Cluster Manager Configuration
-cluster.serviceUrl=tcp://localhost:61616
+cluster.serviceUrl=tcp://localhost
+colombus.servers=http://localhost:9000
