Introduced Configuration (for custom configuration)
Implemented Multicast Discovery

Implemented Web Service Discovery (Colombus), but Colombus Servers are not yet capable of synchronizing.

--- a/nebula-core/nebula-cluster.properties
+++ b/nebula-core/nebula-cluster.properties
@@ -1,2 +1,3 @@
 # Cluster Manager Configuration
-cluster.serviceUrl=tcp://localhost:61616
+cluster.serviceUrl=tcp://localhost
+colombus.servers=http://localhost:9000
