--- a/trunk/Colombus/src/log4j.properties
+++ b/trunk/Colombus/src/log4j.properties
@@ -18,3 +18,5 @@ log4j.logger.com.ibm=ERROR
 log4j.logger.org.w3c=ERROR
 log4j.category.org.apache.commons.httpclient = ERROR
 log4j.category.httpclient.wire = ERROR
+log4j.category.org.apache.cxf = ERROR
+log4j.category.org.mortbay.jetty = ERROR
