--- a/trunk/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/trunk/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Fri Jul 18 13:59:59 IST 2008
-clsCnt=132
+#Fri Jul 18 18:00:05 LKT 2008
+clsCnt=129
 eclipse.preferences.version=1
-locCnt=16537
-pkgCnt=70
-sTime=Friday, July 18, 2008 1\:59\:59 PM IST
+locCnt=16226
+pkgCnt=68
+sTime=Friday, July 18, 2008 6\:00\:05 PM LKT
 srcCnt=2
