--- a/nebula-core/nebula-cluster.properties
+++ b/nebula-core/nebula-cluster.properties
@@ -1,3 +1,3 @@
 # Cluster Manager Configuration
-cluster.serviceUrl=tcp://localhost
-colombus.servers=http://localhost:9000
+cluster.service=tcp://localhost
+#colombus.servers=http://localhost:9000
