UI Intergration (ClusterManager)

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Fri Jul 18 18:00:05 LKT 2008
-clsCnt=129
+#Wed Jul 23 00:10:49 LKT 2008
+clsCnt=136
 eclipse.preferences.version=1
-locCnt=16226
-pkgCnt=68
-sTime=Friday, July 18, 2008 6\:00\:05 PM LKT
+locCnt=17913
+pkgCnt=72
+sTime=Wednesday, July 23, 2008 12\:10\:49 AM LKT
 srcCnt=2
