--- a/nebula-core/nebula-cluster.properties
+++ b/nebula-core/nebula-cluster.properties
@@ -1,3 +1,4 @@
 # Cluster Manager Configuration
-cluster.service=tcp://localhost
+cluster.service=tcp://localhost:61616
+cluster.transports=http://localhost:62626,https://localhost:63636
 #colombus.servers=http://localhost:9000
