--- a/trunk/nebula-core/nebula-client.properties
+++ b/trunk/nebula-core/nebula-client.properties
@@ -1,3 +1,3 @@
 # Nebula Client (Cluster Node) Configuration
 #cluster.service=tcp://localhost
-colombus.servers=http://localhost:9000
+#colombus.servers=http://localhost:9000
