Fixed UI bug with Heart beat failures.
Updated event model to provide reference to ServiceEvent.

Implemented Log4j Swing Logging Support.

Implemented Splash Screen.

--- a/nebula-core/src/log4j.properties
+++ b/nebula-core/src/log4j.properties
@@ -1,6 +1,21 @@
-log4j.rootCategory=DEBUG, nebula
+log4j.rootCategory=DEBUG, nebula, nebulaJTA, nebulaJLBL
+
+# Console Appender
 log4j.appender.nebula=org.apache.log4j.ConsoleAppender
-log4j.appender.nebula.layout=org.apache.log4j.SimpleLayout
+log4j.appender.nebula.layout=org.apache.log4j.PatternLayout
+log4j.appender.nebula.layout.ConversionPattern=%-5p - %m%n
+
+# JTextArea Appender
+log4j.appender.nebulaJTA=org.nebulaframework.util.log4j.JTextAreaAppender
+log4j.appender.nebulaJTA.layout=org.apache.log4j.PatternLayout
+log4j.appender.nebulaJTA.layout.ConversionPattern=%d{HH:mm:ss} %m%n
+
+# JLabel Appender
+log4j.appender.nebulaJLBL=org.nebulaframework.util.log4j.JLabelAppender
+log4j.appender.nebulaJLBL.layout=org.apache.log4j.PatternLayout
+log4j.appender.nebulaJLBL.layout.ConversionPattern=%m%n
+
+# Library Log Levels
 log4j.logger.org.apache.activemq=ERROR
 log4j.logger.org.apache.xbean=ERROR
 log4j.logger.org.springframework=ERROR
