--- a/trunk/nebula-core/src/log4j.properties
+++ b/trunk/nebula-core/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.nebula.layout=org.apache.log4j.PatternLayout
 log4j.appender.nebula.layout.ConversionPattern=%-5p - %m%n
 
 # JTextArea Appender
-log4j.appender.nebulaJTA=org.nebulaframework.util.log4j.JTextAreaAppender
+log4j.appender.nebulaJTA=org.nebulaframework.util.log4j.JTextPaneAppender
 log4j.appender.nebulaJTA.layout=org.apache.log4j.PatternLayout
 log4j.appender.nebulaJTA.layout.ConversionPattern=%d{HH:mm:ss} %m%n
 
