Updated Event Model (support to adding hooks directly).
Fixed potential bugs in Event Notification and GridJobStateListener notification (GridJobFuture), which could result in unexpected behaviour due to a blocking call, or exceptions during execution of user code.

Implemented EventNotification and GridJobStateListeners to use a cached thread pool to execute user code.

Job information UI implemented and tested for ClusterManager.

--- a/nebula-core/src/log4j.properties
+++ b/nebula-core/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.nebula.layout=org.apache.log4j.PatternLayout
 log4j.appender.nebula.layout.ConversionPattern=%-5p - %m%n
 
 # JTextArea Appender
-log4j.appender.nebulaJTA=org.nebulaframework.util.log4j.JTextAreaAppender
+log4j.appender.nebulaJTA=org.nebulaframework.util.log4j.JTextPaneAppender
 log4j.appender.nebulaJTA.layout=org.apache.log4j.PatternLayout
 log4j.appender.nebulaJTA.layout.ConversionPattern=%d{HH:mm:ss} %m%n
 
