Implemented Task Tracking support and fail-safe mechanisms. Now tasks failed with nodes are handled gracefully. Implemented task duplication at final stage for performance boost.
Tested with SplitAggregate and Unbounded Jobs.

Fixed minor issues in Cluster Manager UI.

Updated the JobExecutionManager (updated) and removed JobCancellationCallback. Functionality was merged to JobExecutionManager.

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Fri Jul 25 01:02:09 LKT 2008
-clsCnt=139
+#Mon Jul 28 15:25:46 LKT 2008
+clsCnt=140
 eclipse.preferences.version=1
-locCnt=18415
-pkgCnt=73
-sTime=Friday, July 25, 2008 1\:02\:09 AM LKT
+locCnt=18450
+pkgCnt=72
+sTime=Monday, July 28, 2008 3\:25\:46 PM LKT
 srcCnt=2
