--- a/nebula-core/src/log4j.properties
+++ b/nebula-core/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, nebula, nebulaJTA, nebulaJLBL
+log4j.rootCategory=TRACE, nebula, nebulaJTA, nebulaJLBL
 
 # Console Appender
 log4j.appender.nebula=org.apache.log4j.ConsoleAppender
