Fixed a fatal bug in ClusterManager JobService. It uses the GridJOb instance for direct submission, and results in ClassNotFoundExceptions. Now it was updated to use serialized data for transmission. Class loading happens through GridNodeClassLoader.
Split/Aggregate and Unbounded Job Processing now occurs with in the sandbox. (Fixed along with the class loading solution mentioned above.)

Sandbox issue with allowing access to prohibited classes issued. Now a SecurityException will be thrown if a task attempts to access a prohibited class of framework. (SecurityException will result in total job failure)

NodeBan system bug fixed. Now nodes continue to participate for jobs after failing.

Now jobs are failed if all nodes are banned and no worker node exists.

Fixed an issue with GridJobFuture not updating finished flag when job ends.

Now JMS Connections are cached using ChachingConnectionFactory. This improves performance by a significant factor.

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Fri Aug 01 00:47:05 LKT 2008
-clsCnt=147
+#Fri Aug 01 22:07:06 LKT 2008
+clsCnt=148
 eclipse.preferences.version=1
-locCnt=19506
-pkgCnt=77
-sTime=Friday, August 1, 2008 12\:47\:05 AM LKT
+locCnt=20036
+pkgCnt=79
+sTime=Friday, August 1, 2008 10\:07\:06 PM LKT
 srcCnt=2
