Implemented UI for GridNode.
Implemented auto-discovery support for GridNodes.

Fixed Several Bugs in Grid, GridNode.

Fixed issue with GridNode which causes it to shutdown itself when cluster shutsdown.

Several minor bugs in GridNode UI exists.

--- a/nebula-core/.settings/com.genuitec.eclipse.core.prefs
+++ b/nebula-core/.settings/com.genuitec.eclipse.core.prefs
@@ -1,7 +1,7 @@
-#Fri Aug 01 22:07:06 LKT 2008
-clsCnt=148
+#Sun Aug 03 02:52:15 LKT 2008
+clsCnt=151
 eclipse.preferences.version=1
-locCnt=20036
-pkgCnt=79
-sTime=Friday, August 1, 2008 10\:07\:06 PM LKT
+locCnt=21893
+pkgCnt=78
+sTime=Sunday, August 3, 2008 2\:52\:15 AM LKT
 srcCnt=2
