--- a/nebula-core/nebula-client.properties
+++ b/nebula-core/nebula-client.properties
@@ -1,3 +1,3 @@
 # Nebula Client (Cluster Node) Configuration
-#cluster.service=tcp://localhost
+#cluster.service=tcp://somehost:61616
 #colombus.servers=http://localhost:9000
