--- a/trunk/nebula-core/conf/nebula-client.properties
+++ b/trunk/nebula-core/conf/nebula-client.properties
@@ -1,3 +1,3 @@
 # Nebula Client (Cluster Node) Configuration
-#cluster.service=tcp://somehost:61616
+#cluster.service=tcp://localhost:61616
 #colombus.servers=http://localhost:9000
